--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun May 05 19:54:49 PST 2024
-sdk.dir=C\:\\Users\\punza\\AppData\\Local\\Android\\Sdk
+#Wed Jun 14 09:08:29 PST 2023
+sdk.dir=C\:\\Users\\enzom\\AppData\\Local\\Android\\Sdk
